--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -316,25 +316,9 @@ header .navbar {
 	padding-top: 80px;
 }
 
-.banner-item-01 {
+.banner-item {
 	padding: 300px 0px;
-	background-image: url(../images/slide_01.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
-}
-
-.banner-item-02 {
-	padding: 300px 0px;
-	background-image: url(../images/slide_02.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
-}
-
-.banner-item-03 {
-	padding: 300px 0px;
-	background-image: url(../images/slide_03.jpg);
+	background-image: url(../images/home_banner.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
