--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -318,7 +318,7 @@ header .navbar {
 
 .banner-item {
 	padding: 300px 0px;
-	background-image: url(../images/home_banner.jpg);
+	background-image: url(https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/home_banner.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
