--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -55,7 +55,7 @@ ul.social-icons li a {
 
 ul.social-icons li a:hover {
 	background-color: #f33f3f;
-	color: #fff;
+	color: #f33f3f;
 }
 
 a.filled-button {
@@ -119,7 +119,6 @@ a.filled-button:hover {
 .page-heading .text-content h2 {
 	color: #fff;
 	font-size: 62px;
-	text-transform: uppercase;
 	letter-spacing: 5px;
 }
 
@@ -247,7 +246,6 @@ header .navbar {
 }
 .navbar .navbar-brand h2 {
 	color: #fff;
-	text-transform: uppercase;
 	font-size: 24px;
 	font-weight: 700;
 	-webkit-transition: all .3s ease 0s;
