--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -331,7 +331,7 @@ header .navbar {
 
 .banner .text-content {
 	position: absolute;
-	bottom: 0%;
+	top: 50%;
 	transform: translateY(-50%);
 	text-align: center;
 	width: 100%;
@@ -424,7 +424,7 @@ header .navbar {
 .product-item .down-content h6 {
 	position: absolute;
 	font-size: 18px;
-	color: #121212;
+	color: #f33f3f;
 }
 
 .product-item .down-content p {
