--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -956,7 +956,7 @@ footer .inner-content p a {
 	}
 	.product-item .down-content h6 {
 		position: absolute!important;
-		top: 30px!important;
+		bottom: 0px!important;
 		right: 30px!important;
 	}
 	.product-item .down-content span {
@@ -1039,7 +1039,7 @@ footer .inner-content p a {
 	}
 	.product-item .down-content h6 {
 		position: relative;
-		margin-bottom: 20px;
+		bottom: 0px;
 	}
 	.product-item .down-content span {
 		position: relative;
