--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -429,6 +429,14 @@ header .navbar {
 .product-item img {
 	width: 100%;
 	overflow: hidden;
+	border-radius: 15px;
+	background-image: url("/assets/images/bokeh.jpeg");
+	filter: blur(8px);
+	-webkit-filter: blur(8px);
+	height: 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;	
 }
 
 .product-item .down-content h4 {
