--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -431,11 +431,12 @@ header .navbar {
 	margin-bottom: 20px;
 }
 
-.product-item .down-content h6 {
+h6 {
 	position: absolute;
 	font-size: 18px;
 	color: #f33f3f;
-	padding: 30px
+	padding: 15px 0px 5px 30px;
+	top: 90%;
 }
 
 .product-item .down-content p {
@@ -459,9 +460,6 @@ header .navbar {
 	color: #f33f3f;
 	font-weight: 500;
 }
-
-
-
 
 /* Best Features */
 
@@ -956,8 +954,10 @@ footer .inner-content p a {
 	}
 	.product-item .down-content h6 {
 		position: absolute!important;
+		top: 90%;
 		bottom: 0px!important;
 		right: 30px!important;
+		padding-left: 15px;
 	}
 	.product-item .down-content span {
 		position: absolute!important;
@@ -1038,8 +1038,10 @@ footer .inner-content p a {
 		margin-bottom: 10px;
 	}
 	.product-item .down-content h6 {
+		top: 90%;
 		position: relative;
 		bottom: 0px;
+		padding-left: 15px;
 	}
 	.product-item .down-content span {
 		position: relative;
