--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -421,6 +421,7 @@ header .navbar {
 
 .product-item img {
 	width: 100%;
+	height: 250px;
 	overflow: hidden;
 	border-radius: 15px 15px 0px 0px;
 }
@@ -435,8 +436,9 @@ h6 {
 	position: absolute;
 	font-size: 18px;
 	color: #f33f3f;
-	padding: 15px 0px 5px 30px;
+	padding: 15px 0px 5px 0px;
 	top: 80%;
+	
 }
 
 .product-item .down-content p {
