--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -107,18 +107,12 @@ a.filled-button:hover {
 	background-size: cover;
 }
 
-.page-heading .text-content h4 {
+.page-heading .text-content-2 h4 {
 	color: #f33f3f;
-	font-size: 22px;
+	font-size: 24px;
 	text-transform: uppercase;
 	font-weight: 700;
 	margin-bottom: 15px;
-}
-
-.page-heading .text-content h2 {
-	color: #fff;
-	font-size: 62px;
-	letter-spacing: 5px;
 }
 
 #preloader {
@@ -609,11 +603,11 @@ h6 {
 
 /* Responsive Style */
 @media (max-width: 768px) {
-	.banner .text-content {
+	.banner .text-content-1 {
 		width: 90%;
 		margin-left: 5%;
 	}
-	.banner .text-content h4 {
+	.banner .text-content-2 h4 {
 		font-size: 22px;
 	}
 
@@ -626,11 +620,11 @@ h6 {
 	.banner-item-03 {
 		padding: 180px 0px;
 	}
-	.page-heading .text-content h4 {
+	.page-heading .text-content-2 h4 {
 		font-size: 22px;
 	}
 
-	.page-heading .text-content h2 {
+	.page-heading .text-content-1 h2 {
 		font-size: 36px;
 		letter-spacing: 0.5px;
 	}
