--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -307,9 +307,25 @@ header .navbar {
 	padding-top: 80px;
 }
 
-.banner-item {
+.banner-item-01 {
 	padding: 300px 0px;
 	background-image: url(https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/home_banner.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+}
+
+.banner-item-02 {
+	padding: 300px 0px;
+	background-image: url(../images/slide_02.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+}
+
+.banner-item-03 {
+	padding: 300px 0px;
+	background-image: url(../images/slide_03.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
