--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -307,6 +307,13 @@ header .navbar {
 	padding-top: 80px;
 }
 
+.logo-container {
+	position: absolute;
+	max-height: 200px;
+	max-width: 200px;
+	z-index: 10000;
+}
+
 .banner-item-01 {
 	padding: 300px 0px;
 	background-image: url(https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/home_banner.jpg);
