--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -309,8 +309,11 @@ header .navbar {
 
 .logo-container {
 	position: absolute;
-	max-height: 200px;
-	max-width: 200px;
+	top: 0;
+	left: 0;
+	background-image: url(https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/logo.png);
+	max-height: 150px;
+	max-width: 150px;
 	z-index: 10000;
 }
 
