--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -310,8 +310,8 @@ header .navbar {
 .logo-container {
 	position: absolute;
 	background-image: url(https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/logo.png);
-	max-height: 150px;
-	max-width: 150px;
+	height: 150px;
+	width: 150px;
 	z-index: 10000000000;
 }
 
