--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -641,11 +641,12 @@ h6 {
 	}
 	.banner .text-content-2 h4 {
 		font-size: 22px;
+		top: 80%;
 	}
 
 	.logo-container {
-		height: 100px;
-		width: 100px;
+		height: 75px;
+		width: 75px;
 	}
 
 	.banner .text-content h2 {
