--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -686,6 +686,13 @@ h6 {
 		right: 30px!important;
 		bottom: 30px!important;
 	}
+	.product-item img {
+		width: 100%;
+		height: 240px;
+		overflow: hidden;
+		border-radius: 15px 15px 0px 0px;
+	}
+
 	.best-features .left-content {
 		margin-bottom: 30px;
 	}
