--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -299,6 +299,9 @@ header .navbar {
 }
 
 
+.about-heading .container .row .logo-container{
+	align-self: center;
+}
 
 /* Banner Style */
 .banner {
