--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -107,12 +107,10 @@ a.filled-button:hover {
 	background-size: cover;
 }
 
-.page-heading .text-content-2 h4 {
-	color: #f33f3f;
-	font-size: 24px;
-	text-transform: uppercase;
-	font-weight: 700;
-	margin-bottom: 15px;
+.page-heading .logo-container{
+	align-self: center;
+	align-content: center;
+	vertical-align: center;
 }
 
 #preloader {
@@ -298,10 +296,6 @@ header .navbar {
 	font-family: 'FontAwesome';
 }
 
-
-.about-heading .container .row .logo-container{
-	align-self: center;
-}
 
 /* Banner Style */
 .banner {
