--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -105,7 +105,10 @@ a.filled-button:hover {
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	min-height: 350px;
+	min-height: 320px;
+	position: relative;
+	text-align: center;
+	padding-top: 80px;
 }
 
 #preloader {
