--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -96,7 +96,7 @@ a.filled-button:hover {
 }
 
 .about-heading {
-	background-image: url(../images/about-heading.jpg);
+	background-image: url(../images/logo_banner.png);
 }
 
 .page-heading {
@@ -301,21 +301,10 @@ header .navbar {
 	padding-top: 80px;
 }
 
-.logo-container {
-	position: absolute;
-	background-image: url(https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/logo_style.png);
-	height: 150px;
-	width: 150px;
-	z-index: 1000;
-	-webkit-background-size: contain;
-    -moz-background-size: contain;
-    -o-background-size: contain;
-    background-size: contain;
-}
 
 .banner-item-01 {
 	padding: 300px 0px;
-	background-image: url(https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/home_banner.jpg);
+	background-image: url(https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/logo_banner.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -331,7 +320,7 @@ header .navbar {
 
 .banner-item-03 {
 	padding: 300px 0px;
-	background-image: url(../images/slide_03.jpg);
+	background-image: url(../images/slide_03.jpeg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
