--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -304,7 +304,7 @@ header .navbar {
 
 .banner-item-01 {
 	padding: 300px 0px;
-	background-image: url(https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/logo_banner.jpg);
+	background-image: url(../images/logo_banner.png);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
