--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -96,7 +96,8 @@ a.filled-button:hover {
 }
 
 .about-heading {
-	background-image: url(../images/logo_banner.png);
+	background-image: url(../images/about_logo_banner.png);
+	height: 500px;
 }
 
 .page-heading {
@@ -304,7 +305,7 @@ header .navbar {
 
 .banner-item-01 {
 	padding: 300px 0px;
-	background-image: url(../images/logo_banner.png);
+	background-image: url(../images/logo_banner.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
